# medsquare

./: Copyright.txt  README.md  medsquare.bat  medsquare.sh  medsquare_qt5.sh
colormap/: BlackBody.plist  autumn.lut  bone.lut  colorcube.lut  cool.lut  copper.lut  flag.lut  gray.lut  hot.lut  hsv.lut  jet.lut  lines.lut  pink.lut  prism.lut  spring.lut  summer.lut  white.lut  winter.lut
install/: build.sh  build_old.sh  medsquare.sh
source/: CMakeLists.txt  CMakeOptions.cmake  CONTRIBUTORS  install_manifest.txt  medsquare.dox  setpaths.sh  vtkmsqConfigure.h
source/Applications/: CMakeLists.txt  DicomExplorer.rc  MSQAspectRatioPixmapLabel.cxx  MSQAspectRatioPixmapLabel.h  MSQBTable.h  MSQDicomExplorer.cxx  MSQDicomExplorer.cxx.bak  MSQDicomExplorer.h  MSQDicomExplorer.h.bak  MSQDicomExplorer.qrc  MSQDicomHeaderViewer.cxx  MSQDicomHeaderViewer.h  MSQDicomImageSorter.cxx  MSQDicomImageSorter.h  MSQDicomImageViewer.cxx  MSQDicomImageViewer.cxx.bak.cxx  MSQDicomImageViewer.h  MSQDicomImageViewer.h.bak.h  MSQDicomImageViewerButton.cxx  MSQDicomImageViewerButton.h  MSQDicomQualityControl.cxx  MSQDicomQualityControl.h  MSQDicomSearchLineEdit.cxx  MSQDicomSearchLineEdit.h  MSQDicomTagModel.cxx  MSQDicomTagModel.h  MSQDicomTagSortingModel.cxx  MSQDicomTagSortingModel.h  MSQFileExportDialog.cxx  MSQFileExportDialog.h  MSQSearchLineEdit.cxx  MSQSearchLineEdit.h  MSQSortOrderDelegate.cxx  MSQSortOrderDelegate.h  MSQTagSortItem.cxx  MSQTagSortItem.h  main.cxx
source/Graphics/: CMakeLists.txt  vtkmsqAxialImagePlane.cxx  vtkmsqAxialImagePlane.h  vtkmsqCoronalImagePlane.cxx  vtkmsqCoronalImagePlane.h  vtkmsqFrameSource.cxx  vtkmsqFrameSource.h  vtkmsqGraphicsWin32Header.h  vtkmsqImageItem.cxx  vtkmsqImageItem.h  vtkmsqImagePlane.cxx  vtkmsqImagePlane.h  vtkmsqRectangleActor2D.cxx  vtkmsqRectangleActor2D.h  vtkmsqSagittalImagePlane.cxx  vtkmsqSagittalImagePlane.h
source/IO/: CMakeLists.txt  MSQPListParser.cxx  MSQPListParser.h  MSQPListSerializer.cxx  MSQPListSerializer.h  MSQXMLParser.cxx  MSQXMLParser.h  cmake_install.cmake  vtkmsqAnalyzeHeader.h  vtkmsqAnalyzeReader.cxx  vtkmsqAnalyzeReader.h  vtkmsqAnalyzeWriter.cxx  vtkmsqAnalyzeWriter.cxx.bak  vtkmsqAnalyzeWriter.h  vtkmsqBruker2DSEQReader.cxx  vtkmsqBruker2DSEQReader.h  vtkmsqGDCMImageReader.cxx  vtkmsqGDCMImageReader.h  vtkmsqGDCMMoisacImageReader.cxx  vtkmsqGDCMMoisacImageReader.h  vtkmsqIOWin32Header.h  vtkmsqImageInterleaving.cxx  vtkmsqImageInterleaving.h  vtkmsqMedicalImageProperties.cxx  vtkmsqMedicalImageProperties.h  vtkmsqNiftiReader.cxx  vtkmsqNiftiReader.h  vtkmsqOBJWriter.cxx  vtkmsqOBJWriter.h  vtkmsqPhilipsPAR.cxx  vtkmsqPhilipsPAR.h  vtkmsqPhilipsRECReader.cxx  vtkmsqPhilipsRECReader.h  vtkmsqRawHeader.cxx  vtkmsqRawHeader.h  vtkmsqRawReader.cxx  vtkmsqRawReader.h
source/Imaging/: CMakeLists.txt  MSQColormapFactory.cxx  MSQColormapFactory.h  cmake_install.cmake  vtkmsqImageAverage.cxx  vtkmsqImageAverage.h  vtkmsqImageData.h  vtkmsqImagingWin32Header.h  vtkmsqLookupTable.cxx  vtkmsqLookupTable.h
source/Main/: CMakeLists.txt  MSQ2DRenderWidget.cxx  MSQ2DRenderWidget.h  MSQ3DRenderWidget.cxx  MSQ3DRenderWidget.h  MSQAxialRenderWidget.cxx  MSQAxialRenderWidget.h  MSQComponentWidget.cxx  MSQComponentWidget.h  MSQCoronalRenderWidget.cxx  MSQCoronalRenderWidget.h  MSQExportSliceDialog.cxx  MSQExportSliceDialog.h  MSQGeometryDialog.cxx  MSQGeometryDialog.h  MSQGeometryDifference.cxx  MSQGeometryDifference.h  MSQGeometryDifferenceItem.cxx  MSQGeometryDifferenceItem.h  MSQGeometryItem.cxx  MSQGeometryItem.h  MSQGeometryWidget.cxx  MSQGeometryWidget.h  MSQImageIO.cxx  MSQImageIO.h  MSQImageItem.cxx  MSQImageItem.h  MSQImageManagerWidget.cxx  MSQImageManagerWidget.h  MSQImportDICOMDialog.cxx  MSQImportDICOMDialog.h  MSQInspectorWidget.cxx  MSQInspectorWidget.h  MSQOpenRawDialog.cxx  MSQOpenRawDialog.h  MSQOrientationColors.cxx  MSQOrientationColors.h  MSQOrientationWidget.cxx  MSQOrientationWidget.h  MSQOrthogonalViewer.cxx  (+32 more)
source/Main/images/: icons-url.txt
source/Testing/: CMakeLists.txt  README.txt  teste.py  vtkmsqAnalyzeReaderTest.cxx  vtkmsqAnalyzeWriterTest.cxx  vtkmsqPhilipsReaderTest.cxx  vtkmsqRawReaderTest.cxx
source/Testing/Data/: analyze3x4x5.hdr  dummy_test.hdr  dummy_test.par  imagem2D.raw  МНѮ ОПЧ.raw
